--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,10 +1,17 @@
 From python:3.12.0a3-slim
 
-WORKDIR /app
+RUN groupadd --gid 1000 && \
+    useradd --create-home --gid 1000 --uid 1000 app
 
-COPY requirements.txt requirements.txt
+RUN mkdir -p /home/app/src
+
+WORKDIR /home/app/src
+
+COPY ./ requirements.txt
 RUN pip3 install -r requirements.txt
 
-COPY . .
+USER app
 
-CMD [ "python3", "-m" , "flask", "run", "--host=0.0.0.0"]
+ENTRYPOINT ["flask"]
+
+CMD ["run", "--host=0.0.0.0"]
