--- a/ansible/roles/apt/tasks/main.yml
+++ b/ansible/roles/apt/tasks/main.yml
@@ -6,18 +6,6 @@
     force_apt_get: yes
 
 - name: Install required system packages
-  apt:
-    name: "{{ item }}"
-    update_cache: yes
-    loop:
-      [
-        "apt-transport-https",
-        "ca-certificates",
-        "curl",
-        "git",
-        "software-properties-common",
-        "python3-pip",
-        "python-pip",
-        "virtualenv",
-        "python3-setuptools",
-      ]
+  apt: name:"{{ item }}" update_cache:yes
+  loop: [ 'apt-transport-https', 'ca-certificates', 'curl', 'git', 'software-properties-common', 'python3-pip','python-pip', 'virtualenv', 'python3-setuptools']
+  
