--- a/ansible/roles/docker/tasks/main.yml
+++ b/ansible/roles/docker/tasks/main.yml
@@ -12,15 +12,14 @@
 - name: Update apt and install docker-ce
   apt:
     update_cache: yes
-    name: "docker-compose"
-    state: latest
+    name: "docker-ce"
 
 - name: Install Docker Module for Python
   pip:
     name: docker
-
+    
 - name: Add user to "docker" group
   user:
-    name: "terraform"
+    name: "ubuntu"
     group: "docker"
     append: yes
